--- a/debian/rules
+++ b/debian/rules
@@ -13,6 +13,54 @@
 # package maintainers to append LDFLAGS
 #export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
+LDFLAGS=
+CPPFLAGS=-Wdate-time
+CFLAGS=-O3 -g -O2 -Wformat -Werror=format-security
+CXXFLAGS=-O3 --std=c++11
+
+#l_SONAME=57
+
+TARGETS := \
+	x86_64-w64-mingw32 \
+	i686-w64-mingw32
+WINEPREFIX = $(CURDIR)/build-$$target/wineprefix
+WINEDLLPATH = \
+$(CURDIR)/build-$${target}/bin:\
+$(CURDIR)/build-$${target}/lib:\
+$(CURDIR)/build-$${target}/stubdata:\
+$(CURDIR)/build-$${target}/tools/testfw
+
+EXECUTE = \
+	FORCE_WINEPREFIX="$(WINEPREFIX)" \
+	PATH="$(WINEDLLPATH):$$PATH" \
+	WINEDLLPATH="$(WINEDLLPATH)" \
+	LDFLAGS="$(LDFLAGS)" CFLAGS="$(CFLAGS)" \
+	CXXFLAGS="$(CXXFLAGS)" CPPFLAGS="$(CPPFLAGS)" \
+	/usr/bin/$${target}
+
+# we need eval here, as we need the address bits from the underlying shell scripts
+BJAM = \
+	$(EXECUTE) eval bjam \
+	toolset=gcc-mingw \
+	target-os=windows \
+	binary-format=pe \
+	variant=release \
+	threading=multi \
+	threadapi=win32 \
+	link=shared,static \
+	runtime-link=shared \
+	address-model=\$$address_bits \
+	--build-dir=build-$$target \
+	--stagedir=build-$$target \
+	--user-config=build-$$target/user-config.jam \
+	--without-context \
+	--without-coroutine \
+	--without-mpi \
+	--without-python \
+	--layout=tagged 
+#	-sNO_BZIP2=1 -q 
+#	--without-coroutine2 \
+
 
 %:
 	dh $@
@@ -23,3 +71,89 @@
 #override_dh_auto_configure:
 #	dh_auto_configure -- #	-DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH)
 
+.PHONY: configure build-arch install-arch
+
+override_dh_clean:
+	for target in $(TARGETS); do \
+		rm -rf build-$$target; \
+	done
+	dh_clean
+
+
+override_dh_auto_configure:
+	for target in $(TARGETS) ; \
+	do \
+		mkdir -p build-$$target ; \
+		$(EXECUTE) /usr/bin/prepare-winedllpath && \
+		$(EXECUTE) echo "using gcc : mingw : $$target-g++ : <rc>$$target-windres <archiver>$$target-ar <ranlib>$$target-ranlib ;" > build-$$target/user-config.jam || exit 1 ; \
+	done
+
+override_dh_auto_build:
+	for target in $(TARGETS) ; \
+	do \
+		mkdir -p build-$$target ; \
+		$(EXECUTE) /usr/bin/prepare-winedllpath && \
+		$(BJAM) \
+			--prefix=/usr/$$target \
+			-a || exit 1 ; \
+	done
+
+override_dh_auto_install:
+	for target in $(TARGETS) ; \
+	do \
+		mkdir -p build-$$target ; \
+		$(EXECUTE) /usr/bin/prepare-winedllpath && \
+		$(BJAM) \
+			--prefix=$(CURDIR)/debian/tmp/usr/$$target \
+			install || exit 1 ; \
+		done ; \
+	done
+	dh_install
+
+override_dh_installdocs-indep:
+	dh_installdocs -i
+
+
+override_dh_strip:
+	for target in $(TARGETS) ; \
+	do \
+		DEB_TARGET_GNU_TYPE="$$target" $(EXECUTE) fakeroot dh_strip ; \
+	done
+	#fakeroot dh_strip -plibicu$(l_SONAME) --dbg-package=libicu$(l_SONAME)-mingw-w64-dbg
+	#fakeroot dh_strip -picu-devtools --dbg-package=icu-devtools-mingw-w64-dbg
+	# libicudata library doesn't contain any debug symbols, remove that
+	#for file in `find debian/libicu$(l_SONAME)-mingw-w64-dbg/usr/lib/debug -type f -print`; do \
+	#	fakeroot /bin/sh -c "if ! nm -a '$$file' | grep -q debug; then rm '$$file' ; fi"; \
+	#done
+
+binary:	
+	dh binary --sourcedirectory=$(CURDIR)
+	# after dh binary
+
+override_dh_testroot:
+	fakeroot dh_testroot -O --sourcedirectory=$(CURDIR)
+	#fakeroot dh_testroot -O --sourcedirectory=$(CURDIR)
+override_dh_fixperms:
+	fakeroot  dh_fixperms -O --sourcedirectory=$(CURDIR)
+override_dh_compress:
+	fakeroot  dh_compress -O --sourcedirectory=$(CURDIR)
+override_dh_makeshlibs:
+	for target in $(TARGETS) ; \
+	do \
+		$(EXECUTE) env DEB_TARGET_GNU_TYPE="$$target" fakeroot dh_makeshlibs -O --sourcedirectory=$(CURDIR) ; \
+	done
+
+override_dh_gencontrol:
+	fakeroot dh_gencontrol -O --sourcedirectory=$(CURDIR)
+override_dh_md5sums:
+	fakeroot dh_md5sums -O --sourcedirectory=$(CURDIR)
+override_dh_builddeb:
+	fakeroot dh_builddeb -O --sourcedirectory=$(CURDIR)
+
+%:
+	dh $@ --sourcedirectory=$(CURDIR)
+	#dh $@ --sourcedirectory=$(CURDIR/)source/ --parallel
+
+.PHONY: override_dh_clean override_dh_auto_configure override_dh_auto_build \
+	override_dh_auto_install override_dh_installdocs-indep \
+	override_dh_strip
